--- a/css/Style.css
+++ b/css/Style.css
@@ -68,6 +68,12 @@
    }
  }
 
+ @media (min-width: 1920px) {
+   .container {
+     width: 1890px;
+   }
+ }
+
  /* HEADER */
  header {
    color:#FFFFFF;
